--- a/2.前缀和与差分/2.6一维静态差分.md
+++ b/2.前缀和与差分/2.6一维静态差分.md
@@ -1,1 +1,176 @@
 # 一维静态差分
+
+差分是前缀和的逆运算，常用于处理区间修改的问题。  
+通过差分数组，可以将区间修改的时间复杂度从 $\mathcal{O}(n)$ 优化到 $\mathcal{O}(1)$，而单点查询的时间复杂度变为 $\mathcal{O}(n)$。
+
+## 基本概念
+
+差分的核心思想是：
+1. 对于原数组 $a$，差分数组 $d[i] = a[i] - a[i-1]$
+2. 原数组的区间修改转化为差分数组的两点修改
+3. 差分数组的前缀和即为原数组
+4. 适用于频繁进行区间修改的场景
+
+## 实现方式
+
+差分的实现步骤：
+1. 构建差分数组
+2. 通过两点修改实现区间增加
+3. 通过前缀和还原原数组
+4. 处理查询操作
+
+### 基本实现
+
+``` cpp []
+class Difference {
+private:
+    vector<int> diff;
+    
+public:
+    Difference(vector<int>& nums) {
+        diff.resize(nums.size());
+        // 构建差分数组
+        diff[0] = nums[0];
+        for (int i = 1; i < nums.size(); i++) {
+            diff[i] = nums[i] - nums[i-1];
+        }
+    }
+    
+    // 区间[left, right]增加val
+    void increment(int left, int right, int val) {
+        diff[left] += val;
+        if (right + 1 < diff.size()) {
+            diff[right + 1] -= val;
+        }
+    }
+    
+    // 还原原数组
+    vector<int> result() {
+        vector<int> res(diff.size());
+        res[0] = diff[0];
+        for (int i = 1; i < diff.size(); i++) {
+            res[i] = res[i-1] + diff[i];
+        }
+        return res;
+    }
+};
+```
+
+``` java []
+class Difference {
+    private int[] diff;
+    
+    public Difference(int[] nums) {
+        diff = new int[nums.length];
+        // 构建差分数组
+        diff[0] = nums[0];
+        for (int i = 1; i < nums.length; i++) {
+            diff[i] = nums[i] - nums[i-1];
+        }
+    }
+    
+    // 区间[left, right]增加val
+    public void increment(int left, int right, int val) {
+        diff[left] += val;
+        if (right + 1 < diff.length) {
+            diff[right + 1] -= val;
+        }
+    }
+    
+    // 还原原数组
+    public int[] result() {
+        int[] res = new int[diff.length];
+        res[0] = diff[0];
+        for (int i = 1; i < diff.length; i++) {
+            res[i] = res[i-1] + diff[i];
+        }
+        return res;
+    }
+}
+```
+
+``` python []
+class Difference:
+    def __init__(self, nums):
+        self.diff = [0] * len(nums)
+        # 构建差分数组
+        self.diff[0] = nums[0]
+        for i in range(1, len(nums)):
+            self.diff[i] = nums[i] - nums[i-1]
+    
+    # 区间[left, right]增加val
+    def increment(self, left, right, val):
+        self.diff[left] += val
+        if right + 1 < len(self.diff):
+            self.diff[right + 1] -= val
+    
+    # 还原原数组
+    def result(self):
+        res = [0] * len(self.diff)
+        res[0] = self.diff[0]
+        for i in range(1, len(self.diff)):
+            res[i] = res[i-1] + self.diff[i]
+        return res
+```
+
+## 应用场景
+
+差分在很多问题中都有应用：
+
+1. 区间增减操作
+2. 航班预订统计
+3. 温度变化计算
+4. 人流量统计
+5. 区间覆盖问题
+
+## 示例：航班预订统计
+
+``` cpp []
+vector<int> corpFlightBookings(vector<vector<int>>& bookings, int n) {
+    vector<int> nums(n);
+    Difference diff(nums);
+    
+    // 处理所有预订
+    for (const auto& booking : bookings) {
+        int first = booking[0] - 1;
+        int last = booking[1] - 1;
+        int seats = booking[2];
+        diff.increment(first, last, seats);
+    }
+    
+    return diff.result();
+}
+```
+
+## 时间复杂度
+
+- 构建差分数组：$\mathcal{O}(n)$
+- 区间修改：$\mathcal{O}(1)$
+- 单点查询：$\mathcal{O}(n)$（需要还原原数组）
+- 空间复杂度：$\mathcal{O}(n)$
+
+## 差分 vs 前缀和
+
+优点：
+1. 区间修改$\mathcal{O}(1)$时间复杂度
+2. 实现简单
+3. 空间占用小
+
+缺点：
+1. 单点查询需要$\mathcal{O}(n)$时间
+2. 不适合频繁查询
+3. 需要额外空间存储差分数组
+
+## 注意事项
+
+1. 差分数组的边界处理
+2. 区间修改时的两端处理
+3. 还原数组时的累加
+4. 处理负数和溢出
+
+## 练习建议
+
+1. 实现基本的差分操作
+2. 解决区间修改问题
+3. 结合实际应用场景
+4. 尝试二维差分的扩展
